--- a/konfhub_Task/templates/list.html
+++ b/konfhub_Task/templates/list.html
@@ -37,6 +37,7 @@
     <style>
         table,th,td{
             border:1px solid;
+            border-collapse:collapse;
         }
     </style>
 
